# fintrack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  alembic.ini  main.py  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: .env.example  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: afaed014468b_add_account_and_transaction_tables.py
apps/api/scripts/: init_env.py
apps/api/src/fintrack_api/: main.py
apps/api/src/fintrack_api/adapters/: csv_generic.py
apps/api/src/fintrack_api/core/: config.py  database.py  deps.py  security.py
apps/api/src/fintrack_api/models/: __init__.py  account.py  category.py  import_run.py  transaction.py
apps/api/src/fintrack_api/routers/: __init__.py  accounts.py  auth.py
apps/api/src/fintrack_api/schemas/: account.py  auth.py  transaction.py
apps/api/tests/: conftest.py  test_accounts.py  test_auth.py  test_config.py  test_csv_adapter.py
apps/web/: package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/api/: accounts.ts  transactions.ts
apps/web/src/components/layout/: ProtectedRoute.tsx
apps/web/src/components/transactions/: CsvUploadDialog.tsx
apps/web/src/lib/: api.ts  authToken.ts  queryClient.ts
apps/web/src/pages/: AccountsPage.tsx  HomePage.tsx  LoginPage.tsx
apps/web/src/types/: account.ts
docs/: architecture.md  data-model.md  deployment.md  dev-tooling.md  features.md  tech-stack.md
