[project]
name = "fintrack"
version = "0.1.0"
description = "Financial Tracker"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/api",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.11.0",
]
